Closes #2 - Add posting functionality
Add posting functionality so that users can share thoughts
and interesting links.

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -1,3 +1,5 @@
 @import 'base/base.import.less';
 
 @import 'modules/header.import.less';
+@import 'modules/navigation.import.less';
+@import 'modules/posts.import.less';
