Closes #9 - Add date displaying to post
Add date displaying to post so that users can see when the
post was published.

--- a/client/stylesheets/modules/posts.import.less
+++ b/client/stylesheets/modules/posts.import.less
@@ -7,6 +7,13 @@ ol.posts {
   li {
     padding: 10px;
     border: 1px solid #EEEEEE;
+    hr {
+      margin-top: 15px;
+      margin-bottom: 15px;
+    }
+    p.formatted-date {
+      color: #D5D5D5;
+    }
     p {
       margin-bottom: 0;
     }
