Closes #10 - Add author displaying to post
Add author displaying to post so that others can see who
has written the post.

--- a/client/views/posts/posts.html
+++ b/client/views/posts/posts.html
@@ -24,6 +24,7 @@
               <li>
                 {{simpleFormat body}}
                 <hr>
+                <p class="u-pull-left author">{{author}}</p>
                 <p class="u-pull-right formatted-date">{{formatDate createdAt}}</p>
                 <div class="clear"></div>
               </li>
