--- a/client/views/users/sign_in.html
+++ b/client/views/users/sign_in.html
@@ -1,18 +1,16 @@
 <template name="signIn">
-  <div class="container">
-    <div class="row">
-      <div class="four columns offset-by-four">
-        <form data-id="sign-in-form">
-          <h1 class="text-center">Sign In</h1>
-          <label for="email">E-Mail</label>
-          <input type="email" id="email" class="u-full-width" placeholder="E-Mail" data-id="email">
-          <label for="password">Password</label>
-          <input type="password" id="password" class="u-full-width" placeholder="Password" data-id="password">
-          <input type="submit" class="button-primary u-full-width" value="Sign in">
-        </form>
-        <hr>
-        <a href="{{pathFor 'signUp'}}" class="button u-full-width">Sign up</a>
-      </div>
+  <div class="row">
+    <div class="twelve columns">
+      <form data-id="sign-in-form">
+        <h1 class="text-center">Sign In</h1>
+        <label for="email">E-Mail</label>
+        <input type="email" id="email" class="u-full-width" placeholder="E-Mail" data-id="email">
+        <label for="password">Password</label>
+        <input type="password" id="password" class="u-full-width" placeholder="Password" data-id="password">
+        <input type="submit" class="button-primary u-full-width" value="Sign in">
+      </form>
+      <hr>
+      <a href="{{pathFor 'signUp'}}" class="button u-full-width">Sign up</a>
     </div>
   </div>
 </template>
