--- a/client/views/posts/posts.html
+++ b/client/views/posts/posts.html
@@ -3,7 +3,7 @@
     <div class="twelve columns">
       <form data-id="insert-post-form" class="insert-post-form">
         <textarea class="u-full-width insert-post-form" placeholder="Write something..." data-id="body"></textarea>
-        <input type="submit" class="button-primary u-full-width" value="Submit">
+        <input type="submit" class="button-primary u-pull-right" value="Submit">
       </form>
     </div>
   </div>
