Closes #15 - Add remove post functionality
Add remove post functionality so that users can remove their
own posts.

--- a/client/stylesheets/base/base.import.less
+++ b/client/stylesheets/base/base.import.less
@@ -9,6 +9,13 @@ a {
   text-align: center;
 }
 
+.no-button {
+  border: 0;
+  padding: 0;
+  margin-bottom: 0;
+  margin-left: 10px;
+}
+
 .alert {
   padding: 15px;
   text-align: center;
