Closes #26 - Add Exact Posting Time

--- a/client/views/posts/posts.html
+++ b/client/views/posts/posts.html
@@ -28,7 +28,7 @@
                 {{#if belongsPostToUser}}
                   <button class="u-pull-right no-button remove-post" data-id="remove-post"><i class="fa fa-trash"></i></button>
                 {{/if}}
-                <p class="u-pull-right formatted-date">{{formatDate createdAt}}</p>
+                <p class="u-pull-right formatted-date">{{fullTimeDate createdAt}}</p>
                 <div class="clear"></div>
               </li>
             {{/each}}
