Closes #28 #29 - Downcase username; Allow username for sign in

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -3,3 +3,6 @@
 @import 'modules/header.import.less';
 @import 'modules/navigation.import.less';
 @import 'modules/posts.import.less';
+
+// Keep it at the bottom
+@import 'modules/useraccounts.import.less';
