--- a/client/views/header.html
+++ b/client/views/header.html
@@ -7,7 +7,7 @@
         </li>
         {{#if currentUser}}
           <li class="u-pull-right">
-            <a href="{{pathFor 'signOut'}}"><i class="fa fa-power-off fa-lg"></i></a>
+            <a class="user-logout-link" href="#"><i class="fa fa-power-off fa-lg"></i></a>
           </li>
         {{/if}}
       </ul>
