Closes #38 - Add clear post form button
Add clear post form button so that users can easily remove
the typed text.

--- a/client/views/posts/posts.html
+++ b/client/views/posts/posts.html
@@ -3,6 +3,7 @@
     <div class="twelve columns">
       <form data-id="insert-post-form" class="insert-post-form">
         <textarea class="u-full-width insert-post-form" placeholder="Write something..." data-id="body"></textarea>
+        <button type="button" class="u-pull-left" data-id="clear-form">Clear form</button>
         <input type="submit" class="button-primary u-pull-right" value="Submit">
       </form>
     </div>
