Closes #7 - Add pagination for posts
Add pagination for posts so that not all posts are shown at
once. This increases the initial load time and reduces the
load on the server.

--- a/client/views/posts/posts.html
+++ b/client/views/posts/posts.html
@@ -34,6 +34,7 @@
               </li>
             {{/each}}
           </ol>
+          <button class="u-full-width" data-id="load-more">Load more</button>
         {{else}}
           <div class="alert info">There are no matching posts to display</div>
         {{/if}}
