Refs #21 - Add update profile functionality
Add update profile functionality so that users can update
their profile information (e.g. biography).

--- a/client/stylesheets/modules/navigation.import.less
+++ b/client/stylesheets/modules/navigation.import.less
@@ -1,8 +1,15 @@
-ul.navigation {
-  li.active {
-    font-weight: bold;
-    a {
-      text-decoration: none;
+.navigation {
+  ul {
+    margin-bottom: 0;
+    li.active {
+      font-weight: bold;
+      a {
+        text-decoration: none;
+      }
     }
+  }
+  hr {
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 }
