Closes #46 - Add icons to navigation elements
Add icons to navigation elements which makes it easier for
the user to see the purpose of each navigation element.

--- a/client/stylesheets/modules/navigation.import.less
+++ b/client/stylesheets/modules/navigation.import.less
@@ -1,6 +1,10 @@
 .navigation {
   ul {
     margin-bottom: 0;
+    list-style: none;
+    a:hover {
+      text-decoration: none;
+    }
     li.active {
       font-weight: bold;
       a {
