--- a/client/views/shared/navigation.html
+++ b/client/views/shared/navigation.html
@@ -4,13 +4,13 @@
       <div class="navigation">
         <ul>
           <li class="{{activeIfRouteNameIs 'posts'}}">
-            <a href="{{pathFor 'posts'}}">Posts</a>
+            <a href="{{pathFor 'posts'}}"><i class="fa fa-newspaper-o"></i> Feed</a>
           </li>
         </ul>
         <hr>
         <ul>
           <li class="{{activeIfRouteNameIs 'updateProfile'}}">
-            <a href="{{pathFor 'updateProfile'}}">Update profile</a>
+            <a href="{{pathFor 'updateProfile'}}"><i class="fa fa-user"></i> Update profile</a>
           </li>
         </ul>
       </div>
