Closes #21 - Add user profiles functionality
Add user profiles functionality so that one can see who the
user is.

--- a/client/stylesheets/modules/posts.import.less
+++ b/client/stylesheets/modules/posts.import.less
@@ -11,7 +11,7 @@ ol.posts {
       margin-top: 15px;
       margin-bottom: 15px;
     }
-    p.formatted-date, p.author {
+    p.formatted-date, a.author {
       color: #D5D5D5;
     }
     p {
