Add at sign to username in update profile view
Add at sign to username in update profile view so that the
displaying of the username is consistent.

--- a/client/views/users/update_profile.html
+++ b/client/views/users/update_profile.html
@@ -3,7 +3,7 @@
     <div class="twelve columns">
       <div class="profile">
         {{> avatar user=currentUser size='extra-large' shape='circle' class='avatar-center'}}
-        <h1 class="text-center username">{{currentUser.username}}</h1>
+        <h1 class="text-center username">@{{currentUser.username}}</h1>
         <form data-id="update-profile-form">
           <textarea class="u-full-width biography" placeholder="Write something about you..." data-id="biography">{{currentUser.biography}}</textarea>
           <input type="submit" class="button-primary u-pull-right" value="Update profile">
