--- a/client/stylesheets/modules/posts.import.less
+++ b/client/stylesheets/modules/posts.import.less
@@ -20,6 +20,22 @@ ol.posts {
   }
 }
 
+.post {
+  padding: 10px;
+  border: 1px solid #EEEEEE;
+  hr {
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+  p.formatted-date, a.author {
+    color: #D5D5D5;
+  }
+  p {
+    margin-bottom: 0;
+  }
+  margin-bottom: 20px;
+}
+
 form.insert-post-form {
   margin-bottom: 0;
   input[type=submit] {
