Refactor useraccounts code
Refactor useraccounts code so that the code sticks to the
overall used coding conventions.

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -5,5 +5,5 @@
 @import 'modules/posts.import.less';
 @import 'modules/users.import.less';
 
-// Keep it at the bottom
+// keep it at the bottom
 @import 'modules/useraccounts.import.less';
