Add pagination for posts on user profile page
Add pagination for posts on user profile page so that not all
posts are loaded at once.

--- a/client/views/users/profile.html
+++ b/client/views/users/profile.html
@@ -11,6 +11,7 @@
             {{#each posts}}
               {{> post post=this}}
             {{/each}}
+            <button class="u-full-width" data-id="load-more">Load more</button>
           {{else}}
             <div class="text-center">The user has not posted anything yet</div>
           {{/if}}
