Rename 'posts' template to 'feed'
Rename 'posts' template to 'feed' so that it's clear that this
feed may contain different entries than posts.

--- a/client/views/shared/_navigation.html
+++ b/client/views/shared/_navigation.html
@@ -3,8 +3,8 @@
     <div class="twelve columns">
       <div class="navigation">
         <ul>
-          <li class="{{activeIfRouteNameIs 'posts'}}">
-            <a href="{{pathFor 'posts'}}"><i class="fa fa-newspaper-o"></i> Feed</a>
+          <li class="{{activeIfRouteNameIs 'feed'}}">
+            <a href="{{pathFor 'feed'}}"><i class="fa fa-newspaper-o"></i> Feed</a>
           </li>
         </ul>
         <hr>
