--- a/client/views/feed.html
+++ b/client/views/feed.html
@@ -1,4 +1,4 @@
-<template name="posts">
+<template name="feed">
   <div class="row">
     <div class="twelve columns">
       <form data-id="insert-post-form" class="insert-post-form">
