Closes #11 - Add avatar displaying in footer of post view
Add avatar displaying in footer of post view so that users can
see directly who the post author is.

--- a/client/stylesheets/modules/posts.import.less
+++ b/client/stylesheets/modules/posts.import.less
@@ -15,6 +15,9 @@ textarea.insert-post-form {
   p {
     margin-bottom: 0;
   }
+  .avatar {
+    margin-right: 5px;
+  }
   margin-bottom: 20px;
 }
 
