--- a/client/views/users/profile.html
+++ b/client/views/users/profile.html
@@ -3,9 +3,14 @@
     <div class="twelve columns">
       <div class="profile">
         {{#if Template.subscriptionsReady}}
-          {{> avatar user=user size='extra-large' shape='circle' class='avatar-center'}}
-          <h1 class="text-center username">@{{user.username}}</h1>
-          <p class="text-center">{{user.biography}}</p>
+          {{#with user}}
+            {{> avatar user=user size='extra-large' shape='circle' class='avatar-center'}}
+            <h1 class="text-center username">@{{user.username}}</h1>
+            <p class="text-center">{{user.biography}}</p>
+            <div class="text-center">
+              {{> followButton user=this}}
+            </div>
+          {{/with}}
           <hr>
           {{#if posts.count}}
             {{#each posts}}
