Closes #45 - Add browser users functionality
Add browser users functionality so that users can easily find
other users on the platform.

--- a/client/stylesheets/modules/users.import.less
+++ b/client/stylesheets/modules/users.import.less
@@ -12,3 +12,12 @@
     height: 200px;
   }
 }
+
+.small-profile {
+  padding: 10px;
+  border: 1px solid #EEEEEE;
+  margin-bottom: 20px;
+  .avatar, p {
+    margin-right: 20px;
+  }
+}
