--- a/client/views/shared/_navigation.html
+++ b/client/views/shared/_navigation.html
@@ -6,6 +6,9 @@
           <li class="{{activeIfRouteNameIs 'feed'}}">
             <a href="{{pathFor 'feed'}}"><i class="fa fa-newspaper-o"></i> Feed</a>
           </li>
+          <li class="{{activeIfRouteNameIs 'browseUsers'}}">
+            <a href="{{pathFor 'browseUsers'}}"><i class="fa fa-users"></i> Browse users</a>
+          </li>
         </ul>
         <hr>
         <ul>
