--- a/client/views/users/update_profile.html
+++ b/client/views/users/update_profile.html
@@ -2,16 +2,16 @@
   <div class="row">
     <div class="twelve columns">
       	  <div>
-             <select>
+             <select id="face_selector">
 				 {{#each faces}}
 				 <option value="{{ face_name }}">{{ face_name }}</option>
 				 {{/each}}
 			 </select>
-			 <input type="text"/>nbsp<button class="button-primary">+ face name</button>
+			 <input id="face_input" type="text"/>&nbsp;<button id="add_face" class="button-primary">+ face name</button>
 		 </div>
         <div class="profile">
         {{> avatar user=currentUser size='extra-large' shape='circle' class='avatar-center'}}
-        <h1 class="text-center username">@{{currentUser.username}}</h1>
+        <h1 class="text-center username">@{{user.profile.current_face_name}}</h1>
         <form data-id="update-profile-form">
           <textarea class="u-full-width biography" placeholder="Write something about you..." data-id="biography">{{currentUser.biography}}</textarea>
           <input type="submit" class="button-primary u-pull-right" value="Update profile">
