--- a/client/views/feed.html
+++ b/client/views/feed.html
@@ -18,18 +18,21 @@
   </div>
   <div class="row">
     <div class="twelve columns">
-      {{#if Template.subscriptionsReady}}
         {{#if posts.count}}
-          {{#each posts}}
-            {{> post post=this}}
-          {{/each}}
-          <button class="u-full-width" data-id="load-more">Load more</button>
+            {{#each posts}}
+                {{> post post=this}}
+            {{/each}}
         {{else}}
-          <div class="alert info">There are no matching posts to display</div>
+            <div class="alert info">There are no matching posts to display</div>
         {{/if}}
-      {{else}}
-        <div class="text-center">Loading posts...</div>
-      {{/if}}
+
+        {{#if Template.subscriptionsReady}}
+           {{#if hasMorePosts}}
+            <button class="u-full-width" data-id="load-more">Load more</button>
+           {{/if}}
+        {{else}}
+            <div class="text-center">Loading posts...</div>
+        {{/if}}
     </div>
   </div>
 </template>
