--- a/client/views/users/browse_users.html
+++ b/client/views/users/browse_users.html
@@ -1,14 +1,16 @@
 <template name="browseUsers">
   <div class="row">
     <div class="twelve columns">
+      {{#if users.count}}
+        {{#each users}}
+          {{> smallProfile user=this}}
+        {{/each}}
+      {{else}}
+        <div class="alert info">There are no matching users to display</div>
+      {{/if}}
       {{#if Template.subscriptionsReady}}
-        {{#if users.count}}
-          {{#each users}}
-            {{> smallProfile user=this}}
-          {{/each}}
+        {{#if hasMoreUsers}}
           <button class="u-full-width" data-id="load-more">Load more</button>
-        {{else}}
-          <div class="alert info">There are no matching users to display</div>
         {{/if}}
       {{else}}
         <div class="text-center">Loading users...</div>
