--- a/client/views/shared/_post.html
+++ b/client/views/shared/_post.html
@@ -5,7 +5,9 @@
         <div class="post">
           {{simpleFormat body}}
           <hr>
-          {{> avatar user=author size='extra-small' shape='circle' class='u-pull-left avatar'}}
+          <a href="{{pathFor 'profile' _id=author._id}}">
+            {{> avatar user=author size='extra-small' shape='circle' class='u-pull-left avatar'}}
+          </a>
           <a href="{{pathFor 'profile' _id=author._id}}" class="u-pull-left author">@{{author.username}}</a>
           {{#if belongsPostToUser}}
             <button class="u-pull-right no-button remove-post" data-id="remove-post"><i class="fa fa-trash"></i></button>
