Refers #56 Added search functionality for browse users page

--- a/client/views/users/browse_users.html
+++ b/client/views/users/browse_users.html
@@ -1,6 +1,13 @@
 <template name="browseUsers">
   <div class="row">
     <div class="twelve columns">
+      <form data-id="search-users-form">
+        <input type="text" class="u-full-width" placeholder="Search users..." data-id="search-query">
+      </form>
+    </div>
+  </div>
+  <div class="row">
+    <div class="twelve columns">
       {{#if users.count}}
         {{#each users}}
           {{> smallProfile user=this}}
