Revert "Show "There are no matching posts to display" message only when subscription ready"
This reverts commit f63a5c40e4bddf9b2053a04f9686fb47282d72c2.

--- a/client/views/feed.html
+++ b/client/views/feed.html
@@ -17,13 +17,14 @@
   </div>
   <div class="row">
     <div class="twelve columns">
+      {{#if posts.count}}
         {{#each posts}}
           {{> post post=this}}
         {{/each}}
+      {{else}}
+        <div class="alert info">There are no matching posts to display</div>
+      {{/if}}
       {{#if Template.subscriptionsReady}}
-        {{#unless instance.postsCount.get}}
-          <div class="alert info">There are no matching posts to display</div>
-        {{/unless}}
         {{#if hasMorePosts}}
           <button class="u-full-width" data-id="load-more">Load more</button>
         {{/if}}
