--- a/client/views/feed.html
+++ b/client/views/feed.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="twelve columns">
       <form data-id="insert-post-form" class="insert-post-form">
-        <textarea class="u-full-width" placeholder="Write something..." data-id="body"></textarea>
+        <textarea class="u-full-width insert-post-form" rows="1" placeholder="Write something..." data-id="body"></textarea>
         <input type="submit" class="button-primary u-pull-right" value="Submit">
       </form>
     </div>
