--- a/client/views/users/profile.html
+++ b/client/views/users/profile.html
@@ -5,7 +5,7 @@
         {{#with user}}
           {{> avatar user=user size='extra-large' shape='circle' class='avatar-center'}}
           <h1 class="text-center username">@{{user.username}}</h1>
-          <p class="text-center">{{user.biography}}</p>
+          <p class="text-center">{{simpleFormat user.biography}}</p>
           <div class="text-center">
             {{> followButton user=this}}
           </div>
