Update navigation styling
Update navigation styling so that it's easier for the user to see
what navigation element is currently used.

--- a/client/stylesheets/modules/navigation.import.less
+++ b/client/stylesheets/modules/navigation.import.less
@@ -5,10 +5,14 @@
     a:hover {
       text-decoration: none;
     }
-    li.active {
-      font-weight: bold;
-      a {
-        text-decoration: none;
+    li {
+      padding: 5px;
+      &.active {
+        background: #EEEEEE;
+        font-weight: bold;
+        a {
+          text-decoration: none;
+        }
       }
     }
   }
