Closes #44 - Add reference to GitHub repository
Add reference to GitHub repository so that users can see that
the project is open source and that they can participate.

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -4,6 +4,7 @@
 @import 'modules/navigation.import.less';
 @import 'modules/posts.import.less';
 @import 'modules/users.import.less';
+@import 'modules/footer.import.less';
 
 // keep it at the bottom
 @import 'modules/useraccounts.import.less';
