--- a/client/stylesheets/base/base.import.less
+++ b/client/stylesheets/base/base.import.less
@@ -52,3 +52,13 @@ a {
 .clear {
   clear: both;
 }
+
+.label-success {
+  margin-left: 5px;
+  color: green;
+}
+
+.label-default {
+  margin-left: 5px;
+  color: gray;
+}
