--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -1,6 +1,6 @@
 <template name="layout">
   {{> header}}
-  <div class="container">
+  <div class="container" style="min-height: {{instance.minHeight.get}}">
     {{# if currentUser}}
       <div class="row">
         <div class="four columns">
