--- a/client/stylesheets/modules/users.import.less
+++ b/client/stylesheets/modules/users.import.less
@@ -21,3 +21,15 @@
     margin-right: 20px;
   }
 }
+
+.presence {
+  &.online {
+    margin-left: 5px;
+    color: green;
+  }
+
+  &.offline {
+    margin-left: 5px;
+    color: gray;
+  }
+}
