Switch order of search- and insert post form
Switch order of search- and insert post form so that the
order is more intuitively correct.

--- a/client/stylesheets/modules/posts.import.less
+++ b/client/stylesheets/modules/posts.import.less
@@ -17,9 +17,9 @@
   margin-bottom: 20px;
 }
 
-form.insert-post-form {
+form.search-posts-form {
   margin-bottom: 0;
-  input[type=submit] {
+  input {
     margin-bottom: 0;
   }
 }
