added post edit

--- a/client/stylesheets/modules/posts.import.less
+++ b/client/stylesheets/modules/posts.import.less
@@ -28,6 +28,10 @@ button.remove-post {
   margin-top: -8px;
 }
 
+button.edit-post {
+  margin-top: -8px;
+}
+
 ul.feed-filter {
   list-style: none;
   margin-bottom: 0;
