Adding messaging, #6 1:1 messages

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -5,6 +5,7 @@
 @import 'modules/posts.import.less';
 @import 'modules/users.import.less';
 @import 'modules/footer.import.less';
+@import 'modules/messages.import.less';
 
 // keep it at the bottom
 @import 'modules/useraccounts.import.less';
