--- a/client/stylesheets/modules/posts.import.less
+++ b/client/stylesheets/modules/posts.import.less
@@ -51,6 +51,11 @@ ul.feed-filter {
   }
 }
 
-textarea.insert-post-form {
-  min-height: 39px;
+textarea {
+  &.insert-post-form {
+    min-height: 39px;
+  }
+  &.message-body-form {
+    min-height: 200px;      
+  }
 }
