--- a/client/views/shared/_navigation.html
+++ b/client/views/shared/_navigation.html
@@ -9,6 +9,9 @@
           <li class="{{activeIfRouteNameIs 'browseUsers'}}">
             <a href="{{pathFor 'browseUsers'}}"><i class="fa fa-users"></i> Browse users</a>
           </li>
+          <li class="{{activeIfRouteNameIs 'messages'}}">
+            <a href="{{pathFor 'messages'}}"><i class="fa fa-envelope"></i> Messages</a>
+          </li>    
         </ul>
         <hr>
         <ul>
