Added unread message count to the Messages sidebar menu item, #87 Unread message count on sidebar.

--- a/client/views/shared/_navigation.html
+++ b/client/views/shared/_navigation.html
@@ -10,7 +10,7 @@
             <a href="{{pathFor 'browseUsers'}}"><i class="fa fa-users"></i> Browse users</a>
           </li>
           <li class="{{activeIfRouteNameIs 'messages'}}">
-            <a href="{{pathFor 'messages'}}"><i class="fa fa-envelope"></i> Messages</a>
+            <a href="{{pathFor 'messages'}}"><i class="fa fa-envelope"></i> Messages {{getUnreadCount}}</a>
           </li>    
         </ul>
         <hr>
