Added user mentions
It's now possible to mention other users in a post with @username.

--- a/client/views/feed.html
+++ b/client/views/feed.html
@@ -21,7 +21,7 @@
   <div class="row">
     <div class="twelve columns">
       <form data-id="insert-post-form">
-        <textarea class="u-full-width insert-post-form" rows="1" placeholder="Write something..." data-id="body"></textarea>
+        {{>textareaAutocomplete settings=settings data-id="body" class="u-full-width insert-post-form" rows="1" placeholder="Write something..." }}
         <input type="submit" class="button-primary u-pull-right" value="Submit">
       </form>
     </div>
