--- a/client/stylesheets/modules/posts.import.less
+++ b/client/stylesheets/modules/posts.import.less
@@ -59,3 +59,7 @@ textarea {
     min-height: 200px;      
   }
 }
+
+[data-id="insert-post-form"] .-autocomplete-container {
+  margin-top: 15px;
+}
