--- a/client/views/shared/_navigation.html
+++ b/client/views/shared/_navigation.html
@@ -19,7 +19,7 @@
             <a href="{{pathFor 'following'}}"><i class="fa fa-arrow-left"></i> <i class="fa fa-user"></i> Following</a>
           </li>
           <li class="{{activeIfRouteNameIs 'follower'}}">
-            <a href="{{pathFor 'follower'}}"><i class="fa fa-arrow-right"></i> <i class="fa fa-user"></i> Follower</a>
+            <a href="{{pathFor 'follower'}}"><i class="fa fa-arrow-right"></i> <i class="fa fa-user"></i> Followers</a>
           </li>
           <li class="{{activeIfRouteNameIs 'updateProfile'}}">
             <a href="{{pathFor 'updateProfile'}}"><i class="fa fa-cogs"></i> Update profile</a>
