--- a/client/stylesheets/modules/posts.import.less
+++ b/client/stylesheets/modules/posts.import.less
@@ -62,6 +62,15 @@ textarea {
   }
 }
 
-[data-id="insert-post-form"] .-autocomplete-container {
-  margin-top: 15px;
+[data-id="insert-post-form"] { 
+  .-autocomplete-container {
+    margin-top: 15px;
+  }
+  input[type="submit"].disabled,
+  input[type="submit"].disabled:hover {
+    opacity: 0.3;   
+    cursor: default;
+    background-color: #33C3F0;
+    border-color: #33C3F0;
+  }
 }
