Added hover animation for social media icons

--- a/client/stylesheets/modules/users.import.less
+++ b/client/stylesheets/modules/users.import.less
@@ -13,6 +13,9 @@
     display: flex;
     justify-content: space-around;
     .smAccount {
+      &:hover {
+        transform: scale(1.2);    
+      }
       img {
         width: 75px;
         height: 75px;
