--- a/client/views/shared/_post.html
+++ b/client/views/shared/_post.html
@@ -13,7 +13,7 @@
           {{#if belongsPostToUser}}
             <button class="u-pull-right no-button remove-post" data-id="remove-post"><i class="fa fa-trash"></i></button>
           {{/if}}
-          <p class="u-pull-right formatted-date">{{fullTimeDate createdAt}}</p>
+          <p class="u-pull-right formatted-date">{{formatDate createdAt}}</p>
           <div class="clear"></div>
         </div>
       {{/with}}
