--- a/client/views/shared/_post.html
+++ b/client/views/shared/_post.html
@@ -3,7 +3,7 @@
     <div class="twelve columns">
       {{#with post}}
         <div class="post">
-          {{simpleFormat body}}
+        {{#markdown}}{{body}}{{/markdown}}
           <hr>
           <a href="{{pathFor 'profile' _id=author._id}}">
             {{> avatar user=author size='extra-small' shape='circle' class='u-pull-left avatar'}}
