--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -6,6 +6,7 @@
 @import 'modules/users.import.less';
 @import 'modules/footer.import.less';
 @import 'modules/messages.import.less';
+@import 'modules/jobs.import.less';
 
 // keep it at the bottom
 @import 'modules/useraccounts.import.less';
