Added like dislike functionality.

--- a/client/stylesheets/modules/posts.import.less
+++ b/client/stylesheets/modules/posts.import.less
@@ -58,19 +58,23 @@ textarea {
     min-height: 39px;
   }
   &.message-body-form {
-    min-height: 200px;      
+    min-height: 200px;
   }
 }
 
-[data-id="insert-post-form"] { 
+[data-id="insert-post-form"] {
   .-autocomplete-container {
     margin-top: 15px;
   }
   input[type="submit"].disabled,
   input[type="submit"].disabled:hover {
-    opacity: 0.3;   
+    opacity: 0.3;
     cursor: default;
     background-color: #33C3F0;
     border-color: #33C3F0;
   }
+}
+
+.fa-thumbs-o-up.liked {
+  color: blue;
 }
