--- a/client/views/shared/_post.html
+++ b/client/views/shared/_post.html
@@ -12,8 +12,11 @@
           <span class="fa {{#if author.status.online}} fa-circle presence online {{else}} fa-circle-o presence offline {{/if}} "></span>
           {{#if belongsPostToUser}}
             <button class="u-pull-right no-button remove-post" data-id="remove-post"><i class="fa fa-trash"></i></button>
+
           {{/if}}
           <p class="u-pull-right formatted-date">{{formatDate createdAt}}</p>
+
+          <button class="no-button " data-id="like-post"><i class="fa fa-thumbs-o-up {{#if isLiked}}liked{{/if}}" aria-hidden="false"></i>{{likecount}}</button>
           <div class="clear"></div>
         </div>
       {{/with}}
